--- a/ShopTARgv24.Data/ShopTARgv24.Data.csproj
+++ b/ShopTARgv24.Data/ShopTARgv24.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ShopTARgv24.Core\ShopTARgv24.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
